Change on an existing attendee not recognized by a meeting editor
I open a meeting and change only the ROLE of an attendee. Evolution does not allow me to save the changes, as it does not recognize that anything has changed.
Edited by Milan Crha
I open a meeting and change only the ROLE of an attendee. Evolution does not allow me to save the changes, as it does not recognize that anything has changed.