I#336 - Change on an existing attendee not recognized by a meeting editor

Closes https://gitlab.gnome.org/GNOME/evolution/issues/336